# stars

./: README.md  pyproject.toml
data/interim/: selected_features_df_final.csv  stars_3.csv  stars_dataset3.csv
notebooks/: mlf_tracking_stars.ipynb  stars.ipynb
notebooks/.ipynb_checkpoints/: mlf_tracking_stars-checkpoint.ipynb  stars-checkpoint.ipynb
