[tool.poetry]
name = "stars"
version = "0.1.0"
description = ""
authors = ["andrey-lolobrigida <andrey.lolobrigida@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.4.0"
numpy = "^1.26.3"
pandas = "^2.2.0"
ipykernel = "^6.29.0"
pyarrow = "^15.0.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.2"
umap-learn = "^0.5.5"
mlflow = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
